--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -133,6 +133,21 @@ Keystone:
         port: 35357
     port: 5000
 
+Manila:
+    Internal:
+        vip_param: ManilaApi
+        uri_suffixes:
+            '': /v2/%(tenant_id)s
+    Public:
+        vip_param: Public
+        uri_suffixes:
+            '': /v2/%(tenant_id)s
+    Admin:
+        vip_param: ManilaApi
+        uri_suffixes:
+            '': /v2/%(tenant_id)s
+    port: 8786
+
 Neutron:
     Internal:
         vip_param: NeutronApi
