--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -48,6 +48,8 @@ parameters:
     type: comma_delimited_list
   cinder_api_node_ips:
     type: comma_delimited_list
+  manila_api_node_ips:
+    type: comma_delimited_list
   neutron_api_node_ips:
     type: comma_delimited_list
   keystone_public_api_node_ips:
@@ -260,6 +262,14 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: cinder_api_node_ips}
+                manila_api_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: manila_api_node_ips}
                 neutron_api_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
@@ -332,6 +342,7 @@ resources:
                 aodh::rabbit_hosts: *rabbit_nodes_array
                 cinder::rabbit_hosts: *rabbit_nodes_array
                 glance::notify::rabbitmq::rabbit_hosts: *rabbit_nodes_array
+                manila::rabbit_hosts: *rabbit_nodes_array
                 heat::rabbit_hosts: *rabbit_nodes_array
                 neutron::rabbit_hosts: *rabbit_nodes_array
                 nova::rabbit_hosts: *rabbit_nodes_array
