--- a/puppet/vip-config.yaml
+++ b/puppet/vip-config.yaml
@@ -23,6 +23,7 @@ resources:
                 glance_registry_vip: {get_input: glance_registry_vip}
                 sahara_api_vip: {get_input: sahara_api_vip}
                 swift_proxy_vip: {get_input: swift_proxy_vip}
+                manila_api_vip: {get_input: manila_api_vip}
                 nova_api_vip: {get_input: nova_api_vip}
                 nova_metadata_vip: {get_input: nova_metadata_vip}
                 ceilometer_api_vip: {get_input: ceilometer_api_vip}
