--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -193,6 +193,10 @@ resource_registry:
   OS::TripleO::Services::GnocchiApi: puppet/services/gnocchi-api.yaml
   OS::TripleO::Services::GnocchiMetricd: puppet/services/gnocchi-metricd.yaml
   OS::TripleO::Services::GnocchiStatsd: puppet/services/gnocchi-statsd.yaml
+  # Services that are disabled by default (use relevant environment files):
+  OS::Tripleo::Services::ManilaApi: OS::Heat::None
+  OS::Tripleo::Services::ManilaScheduler: OS::Heat::None
+  OS::Tripleo::Services::ManilaShare: OS::Heat::None
 
 parameter_defaults:
   EnablePackageInstall: false
