--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -94,5 +94,9 @@ outputs:
         glance::notify::rabbitmq::rabbit_port: {get_param: RabbitClientPort}
         glance::notify::rabbitmq::rabbit_password: {get_param: RabbitPassword}
         glance::notify::rabbitmq::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
+        glance::keystone::auth::public_url: {get_param: [EndpointMap, GlancePublic, uri]}
+        glance::keystone::auth::internal_url: {get_param: [EndpointMap, GlanceInternal, uri]}
+        glance::keystone::auth::admin_url: {get_param: [EndpointMap, GlanceAdmin, uri]}
+        glance::keystone::auth::password: {get_param: GlancePassword }
       step_config: |
         include ::tripleo::profile::base::glance::api
