--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -57,6 +57,16 @@ ceilometer::api::keystone_tenant: 'service'
 gnocchi::api::keystone_tenant: 'service'
 heat::keystone_tenant: 'service'
 sahara::admin_tenant_name: 'service'
+aodh::keystone::auth::tenant: 'service'
+ceilometer::keystone::auth::tenant: 'service'
+cinder::keystone::auth::tenant: 'service'
+glance::keystone::auth::tenant: 'service'
+gnocchi::keystone::auth::tenant: 'service'
+heat::keystone::auth::tenant: 'service'
+neutron::keystone::auth::tenant: 'service'
+nova::keystone::auth::tenant: 'service'
+sahara::keystone::auth::tenant: 'service'
+swift::keystone::auth::tenant: 'service'
 
 # keystone
 keystone::cron::token_flush::maxdelay: 3600
@@ -86,6 +96,10 @@ swift::proxy::pipeline:
   - 'proxy-server'
 
 swift::proxy::account_autocreate: true
+swift::keystone::auth::configure_s3_endpoint: false
+swift::keystone::auth::operator_roles:
+  - admin
+  - swiftoperator
 
 # glance
 glance::api::pipeline: 'keystone'
@@ -106,6 +120,7 @@ nova::scheduler::filter::ram_allocation_ratio: '1.0'
 nova::cron::archive_deleted_rows::hour: '*/12'
 nova::cron::archive_deleted_rows::destination: '/dev/null'
 nova::notification_driver: messaging
+nova::keystone::auth::configure_ec2_endpoint: false
 
 # ceilometer
 ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
