Add support for enabling L2 population in Neutron
This change adds support for enabling/disabling L2 population in
Neutron agents. It currently defaults to false.

Change-Id: I3dd19feb4acb1046bc560b35e5a7a111364ea0d7
(cherry picked from commit e8d1a6a090da90eaf495bb7cab879e6d2e8de20e)

--- a/os-apply-config/compute.yaml
+++ b/os-apply-config/compute.yaml
@@ -125,6 +125,11 @@ parameters:
   NeutronEnableTunnelling:
     type: string
     default: "True"
+  NeutronEnableL2Pop:
+    type: string
+    description: >
+        Enable/disable the L2 population feature in the Neutron agents.
+    default: "False"
   NeutronFlatNetworks:
     type: string
     default: 'datacentre'
@@ -404,6 +409,7 @@ resources:
             vni_ranges: {get_input: neutron_vni_ranges}
             bridge_mappings: {get_input: neutron_bridge_mappings}
             enable_tunneling: {get_input: neutron_enable_tunneling}
+            l2_population: {get_input: neutron_enable_l2pop}
             physical_bridge: {get_input: neutron_physical_bridge}
             public_interface: {get_input: neutron_public_interface}
             public_interface_raw_device: {get_input: neutron_public_interface_raw_device}
@@ -463,6 +469,7 @@ resources:
         neutron_network_vlan_ranges: {get_param: NeutronNetworkVLANRanges}
         neutron_bridge_mappings: {get_param: NeutronBridgeMappings}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
+        neutron_enable_l2pop: {get_param: NeutronEnableL2Pop}
         neutron_physical_bridge: {get_param: NeutronPhysicalBridge}
         neutron_public_interface: {get_param: NeutronPublicInterface}
         neutron_password: {get_param: NeutronPassword}
