Add support for enabling L2 population in Neutron
This change adds support for enabling/disabling L2 population in
Neutron agents. It currently defaults to false.

Change-Id: I3dd19feb4acb1046bc560b35e5a7a111364ea0d7

--- a/os-apply-config/controller.yaml
+++ b/os-apply-config/controller.yaml
@@ -358,6 +358,11 @@ parameters:
   NeutronEnableTunnelling:
     type: string
     default: "True"
+  NeutronEnableL2Pop:
+    type: string
+    description: >
+        Enable/disable the L2 population feature in the Neutron agents.
+    default: "False"
   NeutronFlatNetworks:
     type: string
     default: 'datacentre'
@@ -721,6 +726,7 @@ resources:
           dhcp_agents_per_network: {get_input: neutron_dhcp_agents_per_network}
           ovs:
             enable_tunneling: {get_input: neutron_enable_tunneling}
+            l2_population: {get_input: neutron_enable_l2pop}
             local_ip: {get_input: controller_host}
             network_vlan_ranges: {get_input: neutron_network_vlan_ranges}
             bridge_mappings: {get_input: neutron_bridge_mappings}
@@ -880,6 +886,7 @@ resources:
         controller_host: {get_attr: [Controller, networks, ctlplane, 0]}
         controller_virtual_ip: {get_param: VirtualIP}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
+        neutron_enable_l2pop: {get_param: NeutronEnableL2Pop}
         heat.watch_server_url:
           list_join:
             - ''
