Add BondInterfaceOvsOptions parameter to net-config-bond.yaml
This patch adds a new BondInterfaceOvsOptions to the bond.yaml.
Sometimes there is no need to use vlans and therefore bond-with-vlans
template files. This approach allows to setup things like LACP or
the bonding mode via a nested stack heat parameter.

Change-Id: I2d318aa738ab609bc76212bef49b2c5986d6dcdf

--- a/net-config-bond.yaml
+++ b/net-config-bond.yaml
@@ -4,6 +4,11 @@ description: >
   Software Config to drive os-net-config with 2 bonded nics on a bridge.
 
 parameters:
+  BondInterfaceOvsOptions:
+    default: ''
+    description: The ovs_options string for the bond interface. Set things like
+                 lacp=active and/or bond_mode=balance-slb using this option.
+    type: string
   ControlPlaneIp:
     default: ''
     description: IP address/subnet on the ctlplane network
@@ -58,6 +63,7 @@ resources:
                   type: ovs_bond
                   name: bond1
                   use_dhcp: true
+                  ovs_options: {get_param: BondInterfaceOvsOptions}
                   members:
                     # os-net-config translates nic1 => em1 (for example)
                     -
